--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -4,12 +4,14 @@ Unirest==1.1.7
 argparse==1.2.1
 backports-abc==0.4
 backports.ssl-match-hostname==3.5.0.1
-bcrypt==3.0.0
+# bcrypt==3.0.0
+bcrypt
 certifi==2016.2.28
 cffi==1.6.0
 dnspython==1.14.0
 poster==0.8.1
-psycopg2==2.7
+# psycopg2==2.7
+psycopg2-binary
 pycparser==2.14
 singledispatch==3.4.0.3
 six==1.10.0
